Fixed overflow bug in the CSS code

--- a/style.css
+++ b/style.css
@@ -3,19 +3,26 @@
    margin: 0;
    padding: 0;
    box-sizing: border-box;
-   overflow: hidden;
    list-style: none;
    font-family: 'Poppins', Arial, sans-serif;
 }
+body{
+   display: flex;
+   flex-direction: column;
+   width: 100vw;
+   left: 0;
+   justify-content: center;
+   overflow-x: hidden;
+}
 .container{
    margin: 0px auto;
-   width: 70vw;
 }
 .container h1{
    color: #510000;
 }
 .container.hero{
    width: 100vw;
+   left: 0;
    height: 650px;
    font-size: 120%;
    background: #ffff;
@@ -26,11 +33,12 @@
    align-items: flex-start;
    padding: 20px 20px 80px 40px;
    color: #000000ba;
-   margin-top: 0;
+   margin: 0;
    border: solid 1px rgba(46, 0, 42, 0.774);
    border-radius: 0 0 60px 60px;
    box-shadow: 0 30px 100px rgba(65, 0, 38, 0.171);
 }
+
 .container.contact{
    height: 800px;
    display: flex;
@@ -81,13 +89,13 @@
 }
 .container.offer{
    height: 900px;
-   display: flex;
    width: 100vw;
+   margin: 0;
+   display: flex;
    padding: 10px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   margin: 0px;
    gap: 40px;
 }
 .hero img{
@@ -171,6 +179,7 @@ a{
 .navbar{
    position: fixed;
    top: 0;
+   left: 0;
    width: 100vw;
    background: white;
    display: flex;
@@ -253,7 +262,10 @@ a{
    box-shadow: 0 15px 25px #4800653f;
    border-radius: 20px;
    justify-content: space-around;
+   display: block;
+   margin-inline: auto;
    align-items: center;
+   justify-self: center;
 }
 .work :first-child{
    flex: 1;
@@ -410,6 +422,8 @@ hr{
    }
    .work{
       flex-direction: row;
+      justify-self: center;
+      margin-inline: auto;
    }
    .hero img{
       width: 400px;
